--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connected-react-router": "^6.9.2",
     "history": "^4.10.1",
     "immutable": "^4.0.0",
+    "moment": "^2.29.3",
     "prop-types": "^15.8.1",
     "qs": "^6.10.3",
     "react": "^17.0.2",
